# rlhf-compact-llm

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: base.yaml  dpo_qwen.yaml  ppo_qwen.yaml  reward_alt.yaml  reward_hh.yaml  sft_qwen.yaml
docs/: DESIGN.md  RESULTS.md
notebooks/: 01_data_preparation.ipynb  02_sft_baseline.ipynb  03_reward_model.ipynb  04_rlhf_ppo.ipynb  05_evaluation.ipynb  06_human_eval_template.ipynb
outputs/logs/: dpo_config_snapshot.yaml  dpo_training_log.csv  ppo_config_snapshot.yaml  ppo_training_log.csv  reward_config_snapshot.yaml  reward_training_log.csv  sft_config_snapshot.yaml  sft_training_log.csv
outputs/models/dpo_qwen/: README.md  adapter_config.json  special_tokens_map.json  tokenizer_config.json
outputs/models/ppo_qwen/: README.md
outputs/models/reward_model_hh/: README.md  adapter_config.json  adapter_model.safetensors  tokenizer_config.json
outputs/models/sft_qwen/: README.md  adapter_config.json  adapter_model.safetensors
outputs/samples/: model_comparison.csv
outputs/tables/: capability_eval.csv  evaluation_summary.csv  hh_rlhf_length_stats.csv  reward_hacking_indicators.csv  verbosity_analysis.csv
scripts/: run_capability_eval.py  run_dpo.py  run_evaluation.py  run_ppo.py  run_reward.py  run_sft.py  smoke_test.py
space/: README.md  app.py  requirements.txt
src/: __init__.py  data_utils.py  dpo_train.py  evaluation.py  inference.py  metrics.py  model_utils.py  plotting.py  ppo_train.py  preprocessing.py  reward_train.py  sft_train.py
tests/: test_metrics.py  test_preprocessing.py
