[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlhf-compact-llm"
version = "0.1.0"
description = "End-to-end RLHF pipeline (SFT → reward model → PPO) for compact open-source LLMs."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "jujuliaa12" },
]
keywords = [
    "rlhf",
    "llm",
    "ppo",
    "reward-modeling",
    "lora",
    "qwen",
    "alignment",
    "trl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "transformers==4.41.0",
    "datasets==2.19.0",
    "peft==0.10.0",
    "trl==0.9.6",
    "accelerate>=0.30.0",
    "tokenizers>=0.19.0",
    "evaluate>=0.4.0",
    "scikit-learn>=1.4.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "PyYAML>=6.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
]
gpu = [
    "bitsandbytes>=0.43.0",
]
eval = [
    # Capability benchmarks (MMLU, GSM8K, etc.) via the de-facto standard
    # evaluation harness. Used by scripts/run_capability_eval.py.
    "lm-eval>=0.4.0",
]
demo = [
    # HF Space / local Gradio demo dependencies.
    "gradio>=4.30.0",
]

[project.urls]
Homepage = "https://github.com/jujuliaa12/rlhf-compact-llm"
Repository = "https://github.com/jujuliaa12/rlhf-compact-llm"
Issues = "https://github.com/jujuliaa12/rlhf-compact-llm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line-too-long handled by formatter
    "B008",  # function calls in defaults are common in HF code
    "B905",  # zip() strict= argument; pre-3.10 compatibility
    "UP007", # X | Y vs Optional[X]; both are fine
]

[tool.ruff.lint.per-file-ignores]
"notebooks/*" = ["E", "F", "W", "B"]
"tests/*" = ["B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
